fix some bugs on mobile version

--- a/css/3-layouts/index.sass
+++ b/css/3-layouts/index.sass
@@ -122,6 +122,7 @@ nav
   color: black
   text-align: center
   display: block
+  position: relative
 .index-section-3-header
   box-shadow: 0px 10px 5px 0px rgba(0,0,0,0.1)
   height: 73px
@@ -374,11 +375,20 @@ nav
   .index-section-1-copy
     height: 320px
     padding: 0 20px
+  //Section 3
   .index-section-3-copy
     padding: 0 20px
+  .index-section-3-copy-content
+    position: absolute
+    top: 50%
+    transform: translateY(-50%)
   //Section 4
   .index-section-4-slide-hr
     display: none
+  .index-section-4-heading
+    margin: 0 20px
+    font-size: 26px
+    padding-top: 8px
   //Section 6
   .index-section-6
     padding-bottom: 1px
